Use docker in server

--- a/LoginWeb/Dockerfile
+++ b/LoginWeb/Dockerfile
@@ -1,11 +1,8 @@
 FROM python:3.6-slim
 COPY . /app/LoginWeb/
 RUN pip3 install -e /app/LoginWeb && \
-    pip3 install gunicorn
+    pip3 install gunicorn docker
 
-RUN useradd -r user
-RUN chown -R user /app
-USER user
 WORKDIR /app
 
 # activate the flask environment
