--- a/LoginWeb/Dockerfile
+++ b/LoginWeb/Dockerfile
@@ -1,7 +1,13 @@
 FROM python:3.6-slim
+RUN mkdir /app/sock/ -p
 COPY . /app/LoginWeb/
 RUN pip3 install -e /app/LoginWeb && \
     pip3 install gunicorn docker
+
+RUN useradd -r user
+RUN chown -R user /app
+USER user
+WORKDIR /app
 
 WORKDIR /app
 
