--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./LoginWeb:/app/LoginWeb
       - ./LoginWeb/database.db:/app/database.db
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/run/DockerServer:/app/sock
     labels:
       - "traefik.frontend.rule=Host:127.0.0.1"
       - "traefik.port=5000"
@@ -39,7 +39,7 @@ services:
     image: dockerserver
     command: "gunicorn -b unix:///app/sock/DockerServer.sock DockerServer:app --reload"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/run/DockerServer:/app/sock
     labels:
       - "traefik.enable=false"
