--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,22 @@ version: '3'
 services:
   traefik:
     image: traefik
-    # command: --logLevel=INFO
+    command: --logLevel=INFO
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./traefik/traefik.toml:/etc/traefik/traefik.toml:ro
       - ./traefik/host.cert:/host.cert
       - ./traefik/host.key:/host.key
     ports:
-     - "80:80"
-     - "443:443"
-     - "8080:8080"
+      - "80:80"
+      - "443:443" # 8888:443
+      - "8080:8080"
     networks:
       - mynet
 
   tzfserver:
     image: tzfserver
-    command: "gunicorn tzfserver:app -b 0.0.0.0:5000 --access-logfile /app/LoginWeb/log"
+    command: "gunicorn tzfserver:app -b 0.0.0.0:5000 --access-logfile /app/LoginWeb/log --reload"
     # command: "flask run -h 0.0.0.0"
     # environment:
     #   - FLASK_DEBUG=1
@@ -32,6 +32,7 @@ services:
       - "traefik.port=5000"
       - "traefik.enable=true"
       - "traefik.backend=tzfserver"
+      # - "traefik.frontend.entryPoints=https" # not work
     networks:
       - mynet
 
@@ -57,6 +58,7 @@ services:
       - "traefik.port=6080"
       - "traefik.enable=true"
       - "traefik.backend=vnc"
+      - "traefik.frontend.entryPoints=https"
     networks:
       - mynet
 
