Big Change! Use IDP to login

--- a/LoginWeb/Dockerfile
+++ b/LoginWeb/Dockerfile
@@ -1,13 +1,12 @@
 FROM python:3.6-slim
-RUN mkdir /app/sock/ -p
+RUN apt update -y && apt install build-essential -y
+RUN apt install -y xmlsec1 libxmlsec1-dev pkg-config
 COPY . /app/LoginWeb/
 RUN pip3 install -e /app/LoginWeb && \
-    pip3 install gunicorn docker
+    pip3 install gunicorn docker python3-saml
 
-RUN useradd -r user
-RUN chown -R user /app
-USER user
 WORKDIR /app
+RUN mkdir /app/sock/ -p
 RUN touch /app/database.db
 
 # activate the flask environment
