Use same path of certs

--- a/Nextcloud/nginx.conf
+++ b/Nextcloud/nginx.conf
@@ -34,7 +34,7 @@ http {
     server {
         listen              443 ssl;
         # ssl_certificate     /host.cert;
-        ssl_certificate_key /certs/host.key;
+        ssl_certificate_key /certs/privkey.pem;
         ssl_certificate     /certs/fullchain.pem;
 
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
