--- a/Nextcloud/nginx.conf
+++ b/Nextcloud/nginx.conf
@@ -25,27 +25,22 @@ http {
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
 
     upstream php-handler {
-        server app:9000;
+        server nextcloud:9000;
     }
 
     server {
         listen              443 ssl;
-        # ssl_certificate     /host.cert;
+        server_name my.domain.ntu.edu.tw;
+
         ssl_certificate_key /certs/privkey.pem;
         ssl_certificate     /certs/fullchain.pem;
-
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
+        error_page 497      https://$server_name:444$request_uri;
 
-        # Add headers to serve security related headers
-        # Before enabling Strict-Transport-Security headers please read into this
-        # topic first.
-        # add_header Strict-Transport-Security "max-age=15768000;
-        # includeSubDomains; preload;";
-        #
         # WARNING: Only add the preload option once you read about
         # the consequences in https://hstspreload.org/. This option
         # will add the domain to a hardcoded list that is shipped
@@ -56,9 +51,9 @@ http {
         add_header X-Robots-Tag none;
         add_header X-Download-Options noopen;
         add_header X-Permitted-Cross-Domain-Policies none;
+        add_header Strict-Transport-Security "max-age=31536000;"  always;
 
         root /var/www/html;
-
         location = /robots.txt {
             allow all;
             log_not_found off;
@@ -97,7 +92,6 @@ http {
         location / {
             rewrite ^ /index.php$uri;
         }
-
         location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
             deny all;
         }
