--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   tzfserver:
     image: linnil1/tzfserver
-    command: "gunicorn tzfserver:app -b 0.0.0.0:5000 --access-logfile /app/LoginWeb/log --reload"
+    command: "gunicorn tzfserver:app -b 0.0.0.0:5000 --log-file /app/LoginWeb/log --reload"
     # command: "flask run -h 0.0.0.0"
     # environment:
     #   - FLASK_DEBUG=1
@@ -32,7 +32,6 @@ services:
       - "traefik.port=5000"
       - "traefik.enable=true"
       - "traefik.backend=tzfserver"
-      # - "traefik.frontend.entryPoints=https" # not work
     networks:
       - mynet
 
@@ -58,7 +57,6 @@ services:
       - "traefik.port=6080"
       - "traefik.enable=true"
       - "traefik.backend=vnc"
-      - "traefik.frontend.entryPoints=https"
     networks:
       - mynet
 
