--- a/my_vnc/Dockerfile
+++ b/my_vnc/Dockerfile
@@ -1,8 +1,9 @@
-FROM ubuntu:16.04
-RUN apt update
-RUN apt -y install net-tools python python-numpy
-RUN mkdir /app/my_vnc -p
+FROM python:3.6-slim
+RUN pip3 install numpy
+RUN mkdir /app
+RUN touch /app/database.db
 
 WORKDIR /app
-# CMD ["python", "my_vnc/utils/launch.sh", "--vnc", "0.0.0.0:5900", "--web", "my_vnc/build", "]
-CMD ["python", "my_vnc/utils/websockify/run", ":6080", "--token-plugin", "dbToken", "--token-source", "/app/database.db", "--web", "my_vnc/build/"]
+EXPOSE 6080
+# python3 my_vnc/websockify/websockify.py :6080 --token-plugin dbToken --token-source /app/database.db --web my_vnc/build
+CMD ["python3", "my_vnc/websockify/websockify.py", ":6080", "--token-plugin", "dbToken", "--token-source", "/app/database.db", "--web", "my_vnc/build"]
