--- a/my_vnc/Dockerfile
+++ b/my_vnc/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.6-slim
 RUN pip3 install numpy
-RUN mkdir /app
-RUN touch /app/database.db
+RUN mkdir /app/myvnc
+RUN touch /app/db.sqlite
 
-WORKDIR /app
+WORKDIR /app/my_vnc
 EXPOSE 6080
-# python3 my_vnc/websockify/websockify.py :6080 --token-plugin dbToken --token-source /app/database.db --web my_vnc/build
-CMD ["python3", "my_vnc/websockify/websockify.py", ":6080", "--token-plugin", "dbToken", "--token-source", "/app/database.db", "--web", "my_vnc/build"]
+# "python3 websockify/websockify.py :6080 --token-plugin dbToken --token-source /app/db.sqlite --web build"
+CMD ["python3", "websockify/websockify.py", ":6080", "--token-plugin", "dbToken", "--token-source", "/app/db.sqlite", "--web", "build"]
