--- a/Nextcloud/nginx_http.conf
+++ b/Nextcloud/nginx_http.conf
@@ -32,18 +32,8 @@ http {
     }
 
     server {
-        listen              443 ssl;
-        server_name my.domain.ntu.edu.tw;
-
-        ssl_certificate_key /certs/privkey.pem;
-        ssl_certificate     /certs/fullchain.pem;
-        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers         HIGH:!aNULL:!MD5;
-        error_page 497      https://$server_name:443/drive$request_uri;
-
-        location ~ ^/drive {
-            return 302 https://$server_name:443$request_uri;
-        }
+        listen              80;
+        server_name         my.domain.ntu.edu.tw;
 
         # WARNING: Only add the preload option once you read about
         # the consequences in https://hstspreload.org/. This option
@@ -55,7 +45,6 @@ http {
         add_header X-Robots-Tag none;
         add_header X-Download-Options noopen;
         add_header X-Permitted-Cross-Domain-Policies none;
-        add_header Strict-Transport-Security "max-age=31536000;"  always;
 
         root /var/www/html;
         location = /robots.txt {
@@ -96,7 +85,7 @@ http {
         location / {
             rewrite ^ /index.php$uri;
         }
-        location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
+        location ~ ^/(?:build|tests|config|lib|3rdparty|templates)/ {
             deny all;
         }
         location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
