Add script to setup easier

--- a/DockerServer/Dockerfile
+++ b/DockerServer/Dockerfile
@@ -1,11 +1,9 @@
-FROM python:3.6-slim
+FROM python:3.7-slim
 RUN mkdir /app/sock/ -p
 COPY . /app/DockerServer/
 RUN pip3 install -e /app/DockerServer && \
     pip3 install gunicorn
 
-
 WORKDIR /app
-# command: "gunicorn -b unix:/tmp/DockerServer.sock DockerServer:app --reload"
 EXPOSE 3476
-CMD ["gunicorn DockerServer:app -b "0.0.0.0:3476"]
+CMD ['gunicorn DockerServer:app -b "0.0.0.0:3476"']
