--- a/k8s/nextcloud_fpm.yml
+++ b/k8s/nextcloud_fpm.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: nextcloud-docker
-        image: linnil1/nextcloudfpm
+        image: registry-svc.default.svc.cluster.local:5002/linnil1/nextcloudfpm
         ports:
         - containerPort: 9000
           protocol: TCP
