--- a/k8s/myapi_k8s/Dockerfile
+++ b/k8s/myapi_k8s/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7-slim
-RUN pip3 install kubernetes flask gunicorn
+RUN pip3 install kubernetes flask gunicorn pyaml
 RUN mkdir /app
 COPY myapi_k8s.py /app/myapi_k8s.py
 EXPOSE 3476
