--- a/k8s/myapi_k8s_set.yml
+++ b/k8s/myapi_k8s_set.yml
@@ -5,7 +5,7 @@ metadata:
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["pods"]
-  verbs: ["get", "watch", "list"]
+  verbs: ["get", "watch", "list", "create", "delete"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -42,7 +42,10 @@ spec:
       serviceAccountName: myapi-k8s
       containers:
       - name: myapi-k8s
-        image: registry-svc.default.svc.cluster.local:5002/linnil1/myapi_k8s
+        image: linnil1/myapi_k8s
+        command: [tail]
+        args: ['-f', '/dev/null']
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3476
           protocol: TCP
@@ -52,7 +55,7 @@ spec:
       volumes:
       - name: myapi-k8s
         hostPath: 
-          path: ~/LabServer/k8s/myapi_k8s
+          path: /nashome/server/LabServer/k8s/myapi_k8s
       nodeSelector:
         kubernetes.io/hostname: lab304-server2
 ---
