[Large chnage] Rewrite LabServer volume

--- a/Nextcloud/nginx-k8s.conf
+++ b/Nextcloud/nginx-k8s.conf
@@ -28,7 +28,7 @@ http {
     gzip  on;
 
     upstream php-handler {
-        server nextcloud-fpm-svc.default.svc.cluster.local:9000;
+        server nextcloud-fpm.default.svc.cluster.local:9000;
     }
 
     server {
@@ -156,19 +156,19 @@ http {
 
         # static files
         location ^~ /loleaflet {
-            proxy_pass https://nextcloud-collabora-svc.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
             proxy_set_header Host $http_host;
         }
 
         # WOPI discovery URL
         location ^~ /hosting/discovery {
-            proxy_pass https://nextcloud-collabora-svc.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
             proxy_set_header Host $http_host;
         }
 
         # main websocket
         location ~ ^/lool/(.*)/ws$ {
-            proxy_pass https://nextcloud-collabora-svc.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $http_host;
@@ -177,13 +177,13 @@ http {
 
         # download, presentation and image upload
         location ~ ^/lool {
-            proxy_pass https://nextcloud-collabora-svc.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
             proxy_set_header Host $http_host;
         }
 
         # Admin Console websocket
         location ^~ /lool/adminws {
-            proxy_pass https://nextcloud-collabora-svc.default.svc.cluster.local:9980;
+            proxy_pass https://nextcloud-collabora.default.svc.cluster.local:9980;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $http_host;
