--- a/k8s/DockerServer.yml
+++ b/k8s/DockerServer.yml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dockerserver-svc
+  name: dockerserver
 spec:
   selector:
-    name: dockerserver-pod
+    name: dockerserver
   ports:
   - port: 3476
     targetPort: 3476
@@ -13,15 +13,15 @@ spec:
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: dockerserver-dep
+  name: dockerserver
 spec:
   selector:
     matchLabels:
-      name: dockerserver-pod
+      name: dockerserver
   template:
     metadata:
       labels:
-        name: dockerserver-pod
+        name: dockerserver
     spec:
       containers:
       - name: dockerserver
@@ -30,14 +30,15 @@ spec:
         - containerPort: 3476
           protocol: TCP
         volumeMounts:
-        - name: dockerserver-volume
+        - name: volume
           mountPath: /app/DockerServer
+          subPath: DockerServer
         - name: docker-sock
           mountPath: /var/run/docker.sock
       volumes:
       - name: docker-sock
         hostPath: 
           path: /var/run/docker.sock
-      - name: dockerserver-volume
-        hostPath: 
-          path: ~/LabServer/DockerServer
+      - name: volume
+        persistentVolumeClaim:
+          claimName: nfs-labserver
