--- a/k8s/nextcloud_db.yml
+++ b/k8s/nextcloud_db.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextcloud-db-svc
+  name: nextcloud-db
 spec:
   selector:
     name: nextcloud-db-pod
@@ -13,7 +13,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nextcloud-db-dep
+  name: nextcloud-db
 spec:
   selector:
     matchLabels:
@@ -40,9 +40,10 @@ spec:
         - name: MYSQL_USER
           value: nextcloud
         volumeMounts:
-        - mountPath: /var/lib/mysql
-          name: nextcloud-db-volume
+        - name: volume
+          mountPath: /var/lib/mysql
+          subPath: Nextcloud/db
       volumes:
-      - name: nextcloud-db-volume
-        hostPath: 
-          path: ~/LabServer/Nextcloud/db1/
+      - name: volume
+        persistentVolumeClaim:
+          claimName: nfs-labserver
