--- a/k8s/nextcloud_web.yml
+++ b/k8s/nextcloud_web.yml
@@ -2,11 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextcloud-web
+  name: nextcloud-nginx
 spec:
   selector:
     name: nextcloud-nginx
-  type: LoadBalancer
   ports:
   - port: 443
     targetPort: 443
@@ -15,7 +14,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nextcloud-web-dep
+  name: nextcloud-nginx
 spec:
   selector:
     matchLabels:
@@ -29,31 +28,25 @@ spec:
       containers:
       - name: nextcloud-nginx
         image: nginx
-
         ports:
         - containerPort: 443
           protocol: TCP
         volumeMounts:
-        - name: certs
+        - name: volume
           mountPath: /certs
           readOnly: true
-        - name: nextcloud-nginx
+          subPath: certs
+        - name: volume
           mountPath: /etc/nginx/nginx.conf
           readOnly: true
-        - name: nextcloud-html
+          subPath: Nextcloud/nginx-k8s.conf
+        - name: volume
           mountPath: /var/www/html
-        - name: nextcloud-log
+          subPath: Nextcloud/nextcloud
+        - name: volume
           mountPath: /var/log/nginx/
+          subPath: Nextcloud/log
       volumes:
-      - name: certs
-        hostPath: 
-          path: ~/LabServer/certs
-      - name: nextcloud-nginx
-        hostPath: 
-          path: ~/LabServer/Nextcloud/nginx-k8s.conf
-      - name: nextcloud-html
-        hostPath: 
-          path: ~/LabServer/Nextcloud/nextcloud1
-      - name: nextcloud-log
-        hostPath: 
-          path: ~/LabServer/Nextcloud/log
+      - name: volume
+        persistentVolumeClaim:
+          claimName: nfs-labserver
