--- a/k8s/myapi_k8s_set.yml
+++ b/k8s/myapi_k8s_set.yml
@@ -42,9 +42,7 @@ spec:
       serviceAccountName: myapi-k8s
       containers:
       - name: myapi-k8s
-        image: linnil1/myapi_k8s
-        command: [tail]
-        args: ['-f', '/dev/null']
+        image: registry-svc.default.svc.cluster.local:5002/linnil1/myapi_k8s
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3476
@@ -57,8 +55,6 @@ spec:
       - name: volume
         persistentVolumeClaim:
           claimName: nfs-labserver
-      nodeSelector:
-        kubernetes.io/hostname: lab304-server2
 ---
 apiVersion: v1
 kind: Service
