--- a/k8s/pv_homenas.yml
+++ b/k8s/pv_homenas.yml
@@ -18,6 +18,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: nfs-homenas
+  namespace: user
 spec:
   storageClassName: nfs-homenas
   accessModes:
