--- a/k8s/sshpiper.yml
+++ b/k8s/sshpiper.yml
@@ -2,40 +2,42 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: oauthserver
+  name: sshpiper
 spec:
   selector:
-    name: oauthserver
+    name: sshpiper
+  type: NodePort
   ports:
-  - port: 5000
-    targetPort: 5000
+  - port: 2222
+    targetPort: 2222
+    nodePort: 30000
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: oauthserver
+  name: sshpiper
 spec:
   selector:
     matchLabels:
-      name: oauthserver
+      name: sshpiper
   replicas: 1
   template:
     metadata:
       labels:
-        name: oauthserver
+        name: sshpiper
     spec:
       containers:
-      - name: oauthserver
-        image: registry-svc.default.svc.cluster.local:5002/linnil1/oauthserver
+      - name: sshpiper
+        image: farmer1992/sshpiperd
         ports:
-        - containerPort: 5000
+        - containerPort: 2222
           protocol: TCP
         volumeMounts:
         - name: volume
-          mountPath: /app/OauthServer
-          subPath: OauthServer
+          mountPath: /var/sshpiper
+          subPath: sshpiper
         - name: volume
-          mountPath: /app/sshpiper
+          mountPath: /etc/ssh
           subPath: sshpiper
       volumes:
       - name: volume
