--- a/myapi_k8s/template.yml
+++ b/myapi_k8s/template.yml
@@ -2,9 +2,22 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: test
+  namespace: user
   labels:
     UserDocker: "true"
 spec:
+  initContainers:
+  - name: add-files-to-home
+    image: busybox
+    command: ['sh', '-c', 'chown 1000:1000 /home/ubuntu && chmod 700 /home/ubuntu && tar xf /all.tar -C /home/ubuntu']
+    volumeMounts:
+    - name: homenas
+      mountPath: /home/ubuntu
+      subPath: guest
+    - name: homenas
+      mountPath: /all.tar
+      subPath: server/ServerBox/all.tar
+      readOnly: true
   containers:
   - name: test
     image: nvidia/cuda:9.0-cudnn7-devel-ubuntu16.04
