--- a/Nextcloud/nginx-k8s.conf
+++ b/Nextcloud/nginx-k8s.conf
@@ -28,7 +28,7 @@ http {
     gzip  on;
 
     upstream php-handler {
-        server nextcloud-fpm.default.svc.cluster.local:9000;
+        server nextcloud-fpm.user.svc.cluster.local:9000;
     }
 
     server {
