--- a/k8s/my_vnc.yml
+++ b/k8s/my_vnc.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: myvnc
-        image: registry-svc.default.svc.cluster.local:5002/linnil1/docker-vnc
+        image: registry.default.svc.cluster.local/linnil1/docker-vnc
         ports:
         - containerPort: 6080
           protocol: TCP
