--- a/k8s/nextcloud_db.yml
+++ b/k8s/nextcloud_db.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: nextcloud-db
-        image: mariadb
+        image: mariadb:10.2
         ports:
         - containerPort: 3306
           protocol: TCP
