--- a/k8s/nextcloud_fpm.yml
+++ b/k8s/nextcloud_fpm.yml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: nextcloud-fpm
-        image: registry-svc.default.svc.cluster.local:5002/linnil1/nextcloudfpm
+        image: registry.default.svc.cluster.local/linnil1/nextcloudfpm:13
         ports:
         - containerPort: 9000
           protocol: TCP
